- fix: collapse-tags style

--- a/src/styles/collapse-tags.scss
+++ b/src/styles/collapse-tags.scss
@@ -5,6 +5,10 @@
     .separator {
       padding: 0 2.5px;
     }
+
+    + .el-dropdown {
+      margin-left: 5px;
+    }
   }
 
   .el-tag {
